--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,13 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "typescript": "4.9.5"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
