--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,5 @@
 OPENAI_API_KEY=sk-...
 OPENAI_MODEL=gpt-4.1-mini
+DATABASE_URL=postgres://user:password@host:5432/database
+DATABASE_SSL=true
 PORT=4000
