--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "openai": "^4.28.0"
+    "openai": "^4.28.0",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "@types/pg": "^8.11.10",
     "@types/node": "^22.10.1",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
