--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "start": "node dist/server.js",
+    "start": "npm run build && node dist/server.js",
     "dev": "tsx watch src/server.ts"
   },
   "engines": {
